<resources>
    <string name="app_name">Leaf Logic</string>
    <string name="get_started">Get Started</string>
    <string name="about_us">About Us</string>
    <string name="rating">Rating</string>
    <string name="login_text">LogIn</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="signup_text">SignUp</string>
    <string name="demo_name">Mahfuja Yesmin</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_phone">Enter User Phone Number</string>
    <string name="enter_user_birth">Enter Birth Date</string>
    <string name="enter_user_profession">Select Profession</string>
    <string name="logo">logo</string>
    <string name="demo_email">mahfujasolaiman77@gmail.com</string>
    <string name="about_description">Ever wondered what medicinal properties lurk in that fascinating leaf
        you found? Leaf Logic is your mobile companion, empowering you to identify and unlock the potential
        of medicinal plants with ease</string>
    <string name="key_features">Key Features</string>
    <string name="feature1">Accurate Leaf Identification </string>
    <string name="feature1_description">Use our image recognition technology to instantly identify
        whether your leaf is one of the following leaves: Bohera, Horitoki, Lemon grass, Nayon tara,
        Pathor kuchi. And you can also get acquainted with their characteristics.</string>
    <string name="feature2">Learn and Share </string>
    <string name="feature2_description">Dive into a wealth of information about various medicinal plants,
        their properties, and traditional uses</string>
    <string name="feature3">Share Your Knowledge  </string>
    <string name="feature3_description">Contribute to the community by posting blogs with images and insights
        about using medicinal plants.</string>
    <string name="feature4">Engage and Discuss </string>
    <string name="feature4_description">Like, dislike, and comment on blog posts to share your experiences
        and learn from others.</string>
    <string name="address">Location of Head Quarter:</string>
    <string name="address_des">Chittagong University Rd, Chittagong 4331</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Log Out</string>
    <string name="user_info">User Information</string>
    <string name="name">Name:  </string>
    <string name="email">Email Address:  </string>
    <string name="phone">Phone Number: </string>
    <string name="birth">Birth Date: </string>
    <string name="prof">Profession: </string>
    <string name="rate_us">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="write_here">Write Here</string>
    <string name="submit">Submit</string>
    <string name="rated_by">Number of Raters:</string>
    <string name="users">users</string>
    <string name="see_all_rating">See All Ratings</string>
    <string name="rate_us_description_own">Give 1 star for poor experience and 5 stars for a very good experience.</string>
    <string name="rate_us_description_own2">Give some feedback please as your feedback helps us a lot to improve facilities we provide to our users.</string>
    <string name="rate_policy">Ratings and reviews are verified and are from people who use the same type of device that you use.</string>
    <string name="see_today_weather">See More Information</string>
    <string name="enter_city_name">Enter Your City Name</string>
    <string name="see_weather">Weather Update</string>
    <string name="ok">OK</string>
    <string name="feels_like">Feels Like</string>
    <string name="max_temp">Maximum Temperature:</string>
    <string name="min_temp">Minimum Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure (in mbar):</string>
    <string name="see_your_location">See Your Location</string>
    <string name="write_something">Write to post something here
    </string>
    <string name="add_photo">Add Photo</string>
    <string name="enter_title">Enter title of your post</string>
    <string name="comment">Comment Here</string>
    <string name="send_comment">Send</string>
    <string name="comment_tag">Comments</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="capital">Capital:</string>
    <string name="currency">Currency:</string>
    <string name="code">Code:</string>
    <string name="language">Language:</string>
    <string name="continent">Continent:</string>
    <string name="small_heading">Global Country Insights</string>
    <string name="heading_for_countries_page">Unlock the essence of each
        country with details on capitals, languages, and cultural highlights.</string>
    <string name="newsfeed">News Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="my_location">My Location</string>
    <string name="weather">Weather Update</string>
    <string name="classify">Identify Leaf</string>
    <string name="country">Country Explorer</string>
    <string name="heading_for_detection">Identify your leaf</string>
    <string name="feature5_description">Explore a comprehensive directory of countries,
        complete with essential details such as capitals, languages, and unique characteristics to
        enhance your understanding of the world.</string>
    <string name="feature5">Discover Global Insights</string>
    <string name="feature6_description">Stay informed with real-time weather updates for
        any city of your choice using our convenient search feature.</string>
    <string name="feature6">Stay Updated with Weather</string>
    <string name="all_rating_heading">Rating of All Users</string>
    <string name="subheading_for_all_heading">Discover the rating and feedbacks given by our users.</string>


</resources>