<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:textSize="30sp"
        android:text="@string/about_us"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:lineHeight="20dp"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_features"
        android:textAlignment="textStart"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature1"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColorHighlight="@color/hover_over_main"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature1_description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textStyle="normal"
            android:lineHeight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature2"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColorHighlight="@color/hover_over_main"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature2_description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textStyle="normal"
            android:lineHeight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature3"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColorHighlight="@color/hover_over_main"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature3_description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textStyle="normal"
            android:lineHeight="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature4"
            android:textSize="18sp"
            android:textColor="@color/main"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColorHighlight="@color/hover_over_main"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature4_description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textStyle="normal"
            android:lineHeight="15dp"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:paddingHorizontal="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature5"
                android:textSize="18sp"
                android:textColor="@color/main"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColorHighlight="@color/hover_over_main"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature5_description"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"
                android:textStyle="normal"
                android:lineHeight="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:paddingHorizontal="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature6"
                android:textSize="18sp"
                android:textColor="@color/main"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColorHighlight="@color/hover_over_main"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature6_description"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"
                android:textStyle="normal"
                android:lineHeight="15dp"
                />
        </LinearLayout>

        <WebView
            android:id="@+id/webvideo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="14sp"
            android:textColor="@color/main"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColorHighlight="@color/hover_over_main"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/address_des"
            android:textColor="@color/black"
            android:textColorHighlight="@color/hover_over_main"
            android:textSize="15sp"
            android:textStyle="normal"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/location"
            />

    </LinearLayout>
</ScrollView>