<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:background="@color/background"
    tools:context=".AverageRatingActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/averageRatingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/button"
        android:layout_marginBottom="10dp"/>

    <RatingBar
        android:id="@+id/averageRatingBarId"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:numStars="5"
        android:paddingBottom="5dp"
        android:stepSize="0.5"
        android:isIndicator="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/rate_policy"
        android:textColor="@color/hover_over_main"
        android:textAlignment="center"
        android:textSize="15sp"
        android:padding="20dp"
        android:textStyle="normal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rated_by"
            android:textColor="@color/main"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userCountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:textColor="@color/main"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/users"
            android:textColor="@color/main"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/seeAllRatingsId"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/see_all_rating"
        android:layout_marginTop="18dp"
        android:background="@color/button"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/doRatingId"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/rate_us"
        android:layout_marginTop="18dp"
        android:background="@color/button"
        android:textColor="@color/black"
        android:textSize="15sp"
        />


</LinearLayout>