<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/aboutUs"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:textColor="@color/black"
        android:text="@string/about_us"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/startId"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:backgroundTint="@color/button"
        />





</LinearLayout>