<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/loginTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/signupNameId"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/signupEmailId"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/signupPassId"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/signupId"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@color/button"
        android:text="@string/signup_text"
        android:textSize="20sp"
        />








</LinearLayout>