<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CountryActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/hover_over_main2"
        app:title="Leaf Logic"
        app:titleMarginStart="30dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_heading"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textColor="@color/main"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_for_countries_page"
        android:padding="8dp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/blackish"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>


