<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AllRatingsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/hover_over_main2"
        app:title="Leaf Logic"
        app:titleMarginStart="30dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="0dp"
       android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_rating_heading"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textSize="22sp"
        android:textColor="@color/main"/>

    <TextView
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:padding="2dp"
       android:paddingStart="11dp"
        android:text="@string/subheading_for_all_heading"
        android:textColor="@color/blackish"
        android:textSize="14sp"
        android:textStyle="normal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_rating"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>